--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,10 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok}</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
