--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -42,9 +42,14 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    user-secret-key: itheima
+    user-ttl: 7200000
+    user-token-name: authentication
     alioss:
       endpoint: oss-cn-hangzhou.aliyuncs.com
       access-key-id: LTAI5tPeFLzsPPT8gG3LPW64
       access-key-secret: U6k1brOZ8gaOIXv3nXbulGTUzy6Pd7
       bucket-name: sky-take-out
-
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
