完成websocket和springTask的设定

--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -53,3 +53,8 @@ sky:
   wechat:
     appid: ${sky.wechat.appid}
     secret: ${sky.wechat.secret}
+
+  shop:
+    address:广州市番禺区小谷围街道
+  baidu:
+    ak:BnbnJXdQpPLoVZHBP3HpuxFDLzQOH71Y
